Updating small screen  about-section-notes top margin to zero to fix text being too close to bottom portion of screen

--- a/index.css
+++ b/index.css
@@ -169,7 +169,7 @@ nav ul li a{
             margin-left: auto;
             margin-right: auto;
             width: 300px;
-            margin-top: 25px;
+            margin-top: 0;
         }
 
         #about-section-notes-header{
